--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
-port=8081
-spring.datasource.url=jdbc:h2:tcp://localhost/~/test
 spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:~/clase21
 spring.datasource.username=sa
 spring.datasource.password=
 spring.h2.console.enabled=true
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
