--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:~/clase21
+spring.datasource.url=jdbc:h2:~/OdontoDB
 spring.datasource.username=sa
 spring.datasource.password=
 spring.h2.console.enabled=true
