--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,10 @@ spring.h2.console.enabled=true
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
-
+spring.jpa.open-in-view=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
