--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-port=8081
+server.port=8080
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:~/OdontoDB
 spring.datasource.username=sa
