--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=8080
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:~/OdontoDB
+spirng.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=
 spring.h2.console.enabled=true
