--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,21 @@
-server.port=8080
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:~/OdontoDB
-spirng.datasource.url=jdbc:h2:mem:testdb
+
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:~/odontoTest
 spring.datasource.username=sa
 spring.datasource.password=
-spring.h2.console.enabled=true
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.open-in-view=true
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view = true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans: true
 
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
+
+logging.level.org.hibernate.SQL: DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder: trace
+logging.level.org.springframework.security=TRACE
+
+jwt.secret=securityjwt
